# swift-cmake

./: CMakeLists.txt
include/fibonacci/: fibonacci.h  module.modulemap
include/raylib/: module.modulemap
include/uv/: module.modulemap  shim2.h
lib/: fibonacci.cpp
src/: fibonacci.swift
